# Healthy-Gamer-Disord-Bot

./: .gitignore  README.md  main.py  pyproject.toml
rpg_bot/: bot.py
rpg_bot/rpg/: encounter.py  game.py  monster.py  player.py
rpg_bot/rpg/entities/: entity.py  monster.py  player.py
rpg_bot/rpg/entities/classes/: archer.py
